# LearnOpenGLCN

./: CMakeLists.txt  README.md  Shader.h
day_1/: CMakeLists.txt  day1.md  day_1.cpp
day_2/: CMakeLists.txt  day_2.cpp  day_2.md
day_3/: day_3.cpp  day_3.md  day_3shader.vs
day_4/: day_4.cpp  day_4.md  day_4shader.vs
day_5/: day_5.cpp  day_5.h  day_5.md
day_5_2/: day_5.cpp
day_5_3/: day_5.cpp  day_5.h  day_5.md  day_5shader.fs  day_5shader.vs
day_6/: day_6.cpp  day_6.h  day_6.md
day_6_2/: day_6.cpp  day_6.h
imguiTest/: imgui.ini  main.cpp
lightingday7/: day_7.cpp
lightingday7_1/: day_7.cpp
lightingday7_2/: 7_2cube.fs  7_2cube.vs  day_7.cpp
lightingday7_3/: 7_2cube.fs  7_2cube.vs  day_7.cpp  day_7.md  imgui.ini  lighting.fs
lightingday8/: 8cube.fs  8cube.vs  day_8.cpp  lighting.fs
lightingday8_1/: 8_1cube.vs  CMakeLists.txt  day_8_1.cpp
