#Cmake最低版本要求
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

#项目名称
PROJECT(Learn_OpenGL)

#允许gdb调试
set(CMAKE_BUILD_TYPE "Debug")
set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")

ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/day_1)	
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/day_2)	
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/lightingday8_1)	